Mobile issues mostly fixed. You can now click anywhere on brackets or collapsed rows to open/close them, making it much easier to press with chubby fingers. You can also scroll down all the way on mobile, because 100vh != 100% height on mobile because they have things on the bottom covering things up.

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -10,18 +10,9 @@ body {
 }
 #big-flex-wrapper {
     display: flex;
-    height: 100vh;
+    height: 100%;
+    align-items: stretch;
     transition: transform 200ms ease-in-out;
-}
-#clicky-movey {
-    display: none;
-    flex: 20vw;
-    line-height: 100vh;
-    cursor: pointer;
-    text-align: center;
-}
-#clicky-movey img {
-    width: 65%;
 }
 a, .a {
     color: #ff4545;
