--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -12,8 +12,8 @@
 @media (max-width: 800px) and (orientation: portrait) {
     div#part-selector {
         position: fixed;
-        height: 100vh;
         width: 90vw;
+        height: 100%;
         top: 0;
         right: 0;
         transform: translateX(90vw);
